[project]
name = "venv"
version = "0.1.0"
description = ""
authors = [
    {name = "rafaelmello082",email = "rafaelmello082@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black (>=26.3.1,<27.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]

[tool.poetry]
packages = [{include = "venv"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
